--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,10 @@
                         <span class="visually-hidden">Toggle theme</span>
                     </button>
 
+                    <!-- Logout button -->
+                    <a href="{{ url_for('logout') }}" class="btn btn-sm btn-outline-light">
+                        Logout
+                    </a>
                     <!-- optional: user / settings placeholders -->
                     <!-- <a class="btn btn-sm btn-outline-light" href="#">Settings</a> -->
                 </div>
