--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,11 @@
 <div class="text-center">
     <h1 class="display-6">Monthly Spending Recorder</h1>
     <p class="lead">Quickly add transactions, set recurring monthly amounts, and view analytics.</p>
+    {% if not session.get('view_only') %}
+
     <a class="btn btn-primary me-2" href="{{ url_for('add') }}">Add transaction</a>
+    {% endif %}
+
     <a class="btn btn-outline-primary" href="{{ url_for('analytics') }}">View analytics</a>
 </div>
 {% endblock %}
